<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.raileanu.todolistspecial.UserSpaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/userGreetingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_button"/>

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/addTaskLayout">

        <EditText
            android:id="@+id/addTaskTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name_hint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id= "@+id/confirmAddButton"
            android:text="@string/confirm_add_btn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id= "@+id/cancelAddButton"
            android:text="@string/cancel_btn_name"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/taskRecyclerView"
        android:orientation="horizontal"
        />
</LinearLayout>
